# LRAE

./: README.md
fitplane/: CMakeLists.txt  package.xml
fitplane/include/: World.h  plane.h
fitplane/launch/launch/: simulation_gazebo_compare_FAEL.launch  simulation_gazebo_compare_TARE.launch  simulation_scene1.launch  simulation_scene2.launch  simulation_scene3.launch  simulation_scene4.launch  world.launch
fitplane/launch/rviz_config/: simulation.rviz
fitplane/msg/: Plane.msg  PlaneMap.msg
fitplane/src/: FitPlane.cpp  World.cpp  plane.cpp
gen_local_goal/: CMakeLists.txt  package.xml
gen_local_goal/include/: gen_local_goal.h  utils.h
gen_local_goal/src/: gen_local_goal.cpp  gen_local_goal_node.cpp
local_planner/launch/: local_planner.launch
local_planner/src/: localPlanner.cpp  pathFollower.cpp
lrae_planner/: CMakeLists.txt  package.xml
lrae_planner/include/: exploration_planning.h  graph_search.h  heap.h  path_planning.h  planner_interface.h  two_opt.h  utils.h  visiual.h
lrae_planner/launch/: exploration_scene1.launch  exploration_scene2.launch  exploration_scene3.launch  exploration_scene4.launch
lrae_planner/scripts/: realTimePlot.py
lrae_planner/src/: exploration_map_merge.cpp  exploration_planning.cpp  graph_search.cpp  heap.cpp  lrae_planner_node.cpp  path_planning.cpp  utils.cpp  visiual.cpp
scout_simulator/scout_description/urdf/: scout_v2.gazebo  scout_v2.xacro
sensor_conversion/include/slam_simulation/: slam_output.h
sensor_conversion/src/: slam_output.cpp
simworld/: CMakeLists.txt  package.xml
simworld/launch/: demo.rviz  spawn_car.launch
simworld/models/map_xingxing/: model-1_4.sdf  model.config
simworld/models/map_xingxing/materials/scripts/: map.material
simworld/models/map_xingxing/meshes/: map_xingxing.dae
simworld/models/map_yewai/: model-1_4.sdf  model.config
simworld/models/map_yewai/materials/scripts/: map.material
simworld/worlds/: map_scene_1.world  map_scene_2.world  map_scene_3.world  map_scene_4.world
