<?xml version="1.0"?>
<package format="2">
  <name>gen_local_goal</name>
  <version>0.0.0</version>
  <description>The gen_local_goal package</description>

  <maintainer email="2120230386@mail.nankai.edu.cn">Qingchen Bi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>

</package>
